--- a/public/style.css
+++ b/public/style.css
@@ -57,3 +57,12 @@ strong {
     margin: 0 auto;
     text-align: center;
 }
+@media (max-width: 600px) {
+    .container {
+        width: 80vw;
+        margin-top: 100px;
+    }
+    .attribution {
+        width: 80vw;
+    }
+}
